--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -10,7 +10,7 @@ services:
       - ./.env
 
   backend:
-    image: davletova1/foodgram_backend:v4.24.02
+    image: davletova1/foodgram_backend:latest
     restart: always
     volumes:
       - data_value:/code/data/
@@ -22,7 +22,7 @@ services:
       - ./.env
 
   frontend:
-    image: davletova1/foodgram_frontend:v1.24.04
+    image: davletova1/foodgram_frontend:latest
     volumes:
       - ../frontend/:/app/result_build/
     depends_on:
